# Explicitly create a workspace since we have libdnf-sys as a path
# dependency, and in the future we may use other sub-crates.
[workspace]

[package]
name = "rpmostree-rust"
version = "0.1.0"
authors = [
    "Colin Walters <walters@verbum.org>",
    "Jonathan Lebon <jonathan@jlebon.com>",
]
edition = "2021"
# See https://rust-lang.github.io/rfcs/2495-min-rust-version.html
# Usually, we try to keep this to no newer than current RHEL8 rust-toolset version.
# You can find the current versions from here:
# https://access.redhat.com/documentation/en-us/red_hat_developer_tools/1/
# However, right now we are bumping to 1.48 so we can use https://cxx.rs
#rust = "1.48"
links = "rpmostreeinternals"
publish = false

# See https://github.com/cgwalters/cargo-vendor-filterer
[package.metadata.vendor-filter]
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = true
exclude-crate-paths = [ { name = "libz-sys", exclude = "src/zlib" },
                        { name = "libz-sys", exclude = "src/zlib-ng" },
                        # rustix includes pre-generated assembly for linux_raw, which we don't use
                        { name = "rustix", exclude = "src/imp/linux_raw" },
                        # Test files that include binaries
                        { name = "system-deps", exclude = "src/tests" },
                      ]

# This currently needs to duplicate the libraries in configure.ac
# until we unify on Cargo as our build system
[package.metadata.system-deps]
jsonglib = { name = "json-glib-1.0", version = "1" }
libarchive = "3.0"
libcurl = "7"
polkitgobject = { name = "polkit-gobject-1", version = "0" }
rpm = "4"

[dependencies]
anyhow = "1.0.69"
binread = "2.2.0"
bitflags = "2.3"
camino = "1.1.1"
cap-std-ext = "2.0"
cap-std = { version = "1.0.3", features = ["fs_utf8"] }
containers-image-proxy = "0.5.1"
# Explicitly force on libc
rustix = { version = "0.37", features = ["use-libc"] }
cap-primitives = "1.0.3"
cap-tempfile = "1.0.15"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
cxx = "1.0.97"
envsubst = "0.2.1"
either = "1.8.1"
env_logger = "0.10.0"
fail = { version = "0.5", features = ["failpoints"] }
fn-error-context = "0.2.0"
futures = "0.3.28"
indoc = "2.0.1"
indicatif = "0.17.5"
is-terminal = "0.4"
libc = "0.2.146"
libdnf-sys = { path = "rust/libdnf-sys", version = "0.1.0" }
maplit = "1.0"
memfd = "0.6.0"
nix = "0.26.1"
openssl = "0.10.54"
once_cell = "1.18.0"
os-release = "0.1.0"
ostree-ext = "0.11.0"
paste = "1.0"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"
rayon = "1.6.0"
regex = "1.8"
reqwest = { version = "0.11", features = ["native-tls", "blocking", "gzip"] }
rpmostree-client = { path = "rust/rpmostree-client", version = "0.1.0" }
rust-ini = "0.19.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.96"
serde_yaml = "0.9.16"
systemd = "0.10.0"
tempfile = "3.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.28.2", features = ["time", "process", "rt", "net"] }
xmlrpc = "0.15.1"
termcolor = "1.1.3"

[build-dependencies]
anyhow = "1.0"
system-deps = "6.1"

[lib]
name = "rpmostree_rust"
path = "rust/src/lib.rs"

[[bin]]
name = "rpm-ostree"
path = "rust/src/main.rs"

[profile.dev]
opt-level = 1 # No optimizations are too slow for us.

[profile.release]
# Unwinding across FFI boundaries is undefined behavior, and anyways, we're
# [crash-only](https://en.wikipedia.org/wiki/Crash-only_software)
panic = "abort"
# We assume we're being delivered via e.g. RPM which supports split debuginfo
debug = true

[profile.releaselto]
inherits = "release"
lto = "thin"

[features]
# Note: If you add a feature here, you also probably want to update utils.rs:get_features()
fedora-integration = []
rhsm = ["libdnf-sys/rhsm"]
bin-unit-tests = []
# ASAN+UBSAN
sanitizers = []

default = []
